unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/UniqueEntry__RingLead_Configuration__c.object-meta.xml
<CustomObject>
    <label>RingLead Configuration</label>
    <nameField>
        <label>RingLead Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RingLead Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>