unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__Active_Configuration__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Active_Configuration__c</fullName>
    <label>Active Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>