unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__After_Create_Case__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__After_Create_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Create Case</label>
    <type>Checkbox</type>
</CustomField>