unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__After_Update__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__After_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>