unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__After_Update_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__After_Update_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Update Opportunity</label>
    <type>Checkbox</type>
</CustomField>