unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__CloneSourceId__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__CloneSourceId__c</fullName>
    <label>CloneSourceId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>