unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__Data_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Data_Expiry_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Data Expiry Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>