unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__Enable_RingLead_Routing__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Enable_RingLead_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable RingLead Routing</label>
    <type>Checkbox</type>
</CustomField>