unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__RingLead_Days_Param__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__RingLead_Days_Param__c</fullName>
    <label>RingLead Days Param</label>
    <length>10</length>
    <type>Text</type>
</CustomField>