unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__RingLead_DMS_Task__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__RingLead_DMS_Task__c</fullName>
    <label>RingLead DMS Task</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>