unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__RingLead_Schedule_Option__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__RingLead_Schedule_Option__c</fullName>
    <label>RingLead Schedule Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>