unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__Trigger_Case_Config_Json__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Trigger_Case_Config_Json__c</fullName>
    <label>Trigger_Case_Config_Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>