unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__Trigger_Every_Time__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Trigger_Every_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Every Time</label>
    <type>Checkbox</type>
</CustomField>