unpackaged/main/default/objects/UniqueEntry__RingLead_Configuration__c/fields/UniqueEntry__Trigger_Once__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Trigger_Once__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Trigger Once</label>
    <type>Checkbox</type>
</CustomField>